--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,12 @@ spring.devtools.livereload.enabled=true
 # spring.datasource.hikari.password=1234
 # spring.datasource.hikari.connection-test-query=SELECT 1
 
-# Oracle
+# Local Oracle
 spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.hikari.username=jy1
 spring.datasource.hikari.password=1234
+
 
 # All DBMS
 spring.datasource.hikari.maximum-pool-size=10
